--- a/package.json
+++ b/package.json
@@ -1,34 +1,27 @@
 {
-  "name": "ftlot-api",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "prisma": {
-    "seed": "ts-node prisma/seed.ts"
-  },
+  "name": "flt-app",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "start": "node dist/index.js",
-    "dev": "nodemon",
-    "docker:dev": "npm run docker:down && docker-compose -f docker/development/docker-compose.dev.yml up --build --remove-orphans -d",
-    "docker:down": "npm run docker:dev:down",
-    "docker:dev:down": "docker-compose -f docker/development/docker-compose.dev.yml down",
-    "db:seed": "ts-node prisma/seed.ts",
-    "prisma:generate": "prisma generate",
-    "build": "rm -rf dist && prisma generate && tsc"
+    "dev": "next dev --turbopack",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "@prisma/client": "^6.3.1",
-    "express": "^4.21.2"
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "next": "15.1.7"
   },
   "devDependencies": {
-    "@types/express": "^5.0.0",
-    "@types/node": "^22.13.4",
-    "nodemon": "^3.1.9",
-    "prisma": "^6.3.1",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.7.3"
+    "typescript": "^5",
+    "@types/node": "^20",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1",
+    "eslint": "^9",
+    "eslint-config-next": "15.1.7",
+    "@eslint/eslintrc": "^3"
   }
 }
