--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,27 @@
 {
   "compilerOptions": {
-    "target": "ES6",                       // The target JavaScript version (you can change this if needed)
-    "module": "commonjs",                   // Use CommonJS module system (required for Node.js)
-    "outDir": "./dist",                     // Output directory for compiled JavaScript
-    "rootDir": "./src",                     // The root directory of your TypeScript files
-    "esModuleInterop": true,                // Allows default imports from modules with no default export
-    "strict": true,                         // Enable strict type-checking options
-    "skipLibCheck": true,                   // Skip type checking of declaration files
-    "forceConsistentCasingInFileNames": true
+    "target": "ES2017",
+    "lib": ["dom", "dom.iterable", "esnext"],
+    "allowJs": true,
+    "skipLibCheck": true,
+    "strict": true,
+    "noEmit": true,
+    "esModuleInterop": true,
+    "module": "esnext",
+    "moduleResolution": "bundler",
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "jsx": "preserve",
+    "incremental": true,
+    "plugins": [
+      {
+        "name": "next"
+      }
+    ],
+    "paths": {
+      "@/*": ["./src/*"]
+    }
   },
-  "include": ["src/**/*.ts"],               // Include all TypeScript files in the 'src' folder
-  "exclude": ["node_modules"]               // Exclude node_modules directory
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "exclude": ["node_modules"]
 }
