--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
   },
   "dependencies": {
     "@prisma/client": "^6.4.1",
+    "better-auth": "^1.2.1",
     "next": "15.1.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "resend": "^4.1.2",
     "zod": "^3.24.2"
   },
   "devDependencies": {
